--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -180,7 +180,7 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after,  #linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
+#margin-top-dropdown:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
     content: "";
     height: 2px;
     background-color: pink;
@@ -224,7 +224,7 @@ ul li ul.dropdown a:hover {
     }
 }
 
-.saiuEgipcia::after, .saiuGrecia::after, .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuNordica::after, .saiuRomana::after {
+.saiuEgipcia::after, .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuIrlandesa::after, .saiuNordica::after, .saiuRomana::after {
     content: "";
     background-color: pink;
     width: 100%;
@@ -318,7 +318,7 @@ ul li ul.dropdown a:hover {
     margin-top: 20px;
     border: none;
     font-size: 1.5em;
-    background-color: #170ceb;
+    background-color: #3027da;
     color: #fff;
     width: 250px;
     padding: 12px;
@@ -333,7 +333,7 @@ ul li ul.dropdown a:hover {
 
 .informacoes-questao {
     grid-area: informacoes;
-    background-color: #241bb9;
+    background-color: #342cc4;
     color: #fff;
     height: 91.9vh;
     display: grid;
@@ -387,7 +387,7 @@ ul li ul.dropdown a:hover {
 
 .buttonResponder > input[type=button], .buttonResponder > input[type=submit] {
     border: none;
-    background-color: #241bb9;
+    background-color: #3027da;
     color: #fff;
     width: 150%;
     padding: 20px;
@@ -438,7 +438,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1efa0b;
+    background-color: #169b62;
     height: 91.9vh;
     color: #fff;
     font-size: 3em;
@@ -452,7 +452,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #241bb9;
+    background-color: #3027da;
     color: #fff;
 }
 
@@ -483,7 +483,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fa0b0b;
+    background-color: #c22e2e;
     height: 91.9vh;
     color: #fff;
     font-size: 3em;
