Feature: adicionado perguntas quiz geral e japones

--- a/front/site/quiz/css-quiz/animations-css/romana.css
+++ b/front/site/quiz/css-quiz/animations-css/romana.css
@@ -424,7 +424,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1efa0b;
+    background-color: #169b62;
     height: 91.9vh;
     color: #fff;
     font-size: 3em;
@@ -469,7 +469,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fa0b0b;
+    background-color: #c22e2e;
     height: 91.9vh;
     color: #fff;
     font-size: 3em;
