--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -351,6 +351,43 @@ ul li ul.dropdown a:hover {
     }
 }
 
+#link-quiz:hover::after {
+    content: "";
+    height: 2px;
+    background-color: rgb(20, 18, 126);
+    margin-left: 25px;
+    display: block;
+    width: 80%;
+    transition: .5s;
+    animation-name: hover-animation;
+    animation-duration: .2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+.saiuQuiz::after {
+    content: "";
+    background-color: rgb(20, 18, 126);
+    margin-left: 25px;
+    display: block;
+    animation-name: sair-animation-quiz;
+    animation-duration: .3s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+@keyframes sair-animation-quiz {
+    0% {
+        width: 80%;
+        height: 2px;
+    }
+
+    100% {
+        width: 0%;
+        height: 2px;
+    }
+}
+
 .dropdown > li > a {
     padding: 8px 8px;
 }
