--- a/front/site/quiz/css-quiz/animations-css/geral.css
+++ b/front/site/quiz/css-quiz/animations-css/geral.css
@@ -95,7 +95,7 @@ ul li ul.dropdown a:hover {
 #link-home:hover::after, #link-sair:hover::after {
     content: "";
     height: 2px;
-    background-color: #083091;
+    background-color: #000;
     margin-left: 20px;
     display: block;
     width: 70%;
@@ -118,7 +118,7 @@ ul li ul.dropdown a:hover {
 
 .mouseSaiu::after, .saiuLogin::after {
     content: "";
-    background-color: #083091;
+    background-color: #000;
     margin-left: 20px;
     display: block;
     animation-name: sair-animation;
@@ -142,7 +142,7 @@ ul li ul.dropdown a:hover {
 #link-mitologia:hover::after {
     content: "";
     height: 2px;
-    background-color: #083091;
+    background-color: #000;
     margin-left: 25px;
     display: block;
     width: 80%;
@@ -155,7 +155,7 @@ ul li ul.dropdown a:hover {
 
 .mouseSaiuMitologia::after {
     content: "";
-    background-color: #083091;
+    background-color: #000;
     margin-left: 25px;
     display: block;
     animation-name: sair-animation-grecia;
@@ -183,7 +183,7 @@ ul li ul.dropdown a:hover {
 #margin-top-dropdown:hover::after,  #linkGrecia:hover::after,  #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
     content: "";
     height: 2px;
-    background-color: #083091;
+    background-color: #000;
     display: block;
     width: 100%;
     animation-name: dropdown-animations;
@@ -205,7 +205,7 @@ ul li ul.dropdown a:hover {
 #link-dropdown-excessao:hover::after {
     content: "";
     height: 2px;
-    background-color: #083091;
+    background-color: #000;
     display: block;
     width: 100%;
     animation-name: dropdown-excessao-animation;
@@ -226,7 +226,7 @@ ul li ul.dropdown a:hover {
 
 .saiuEgipcia::after, .saiuGrecia::after, .saiuGeral::after,  .saiuHindu::after, .saiuIrlandesa::after, .saiuNordica::after, .saiuRomana::after {
     content: "";
-    background-color: #083091;
+    background-color: #000;
     width: 100%;
     display: block;
     animation-name: sair-dropdown-animations;
@@ -249,7 +249,7 @@ ul li ul.dropdown a:hover {
 
 .saiuMesopotamia::after {
     content: "";
-    background-color: #083091;
+    background-color: #000;
     display: block;
     width: 100%;
     animation-name: sair-dropdown-excessao;
@@ -319,7 +319,7 @@ ul li ul.dropdown a:hover {
 
 .informacoes-questao {
     grid-area: informacoes;
-    background-color: #CF435F;
+    background-color: #6b6b6b;
     color: #fff;
     height: 91.8vh;
     display: grid;
@@ -374,7 +374,7 @@ ul li ul.dropdown a:hover {
 .buttonResponder > input[type=button] {
     position: relative;
     border: none;
-    background-color: #083091;
+    background-color: #000;
     color: #fff;
     width: 150%;
     padding: 20px;
@@ -440,7 +440,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #CF435F;
+    background-color: #6b6b6b;
     color: #fff;
 }
 
@@ -535,6 +535,10 @@ label {
 
 #secao-pergunta-6 > .alternativas > .radio-container > label, #secao-pergunta-7 > .alternativas > .radio-container > label, #secao-pergunta-8 > .alternativas > .radio-container > label {
     font-size: 1.8em;
+}
+
+#secao-pergunta-6 > .alternativas > .buttonResponder > input[type=button], #secao-pergunta-7 > .alternativas > .buttonResponder > input[type=button], #secao-pergunta-8 > .alternativas > .buttonResponder > input[type=button] {
+    top: 0;
 }
 
 #secao-pergunta-7 {
