hotfix: Foi corrigido os links do header e questoes

--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -180,7 +180,7 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
+#margin-top-dropdown:hover::after, #linkJaponesa:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
     content: "";
     height: 2px;
     background-color: pink;
