--- a/front/site/quiz/css-quiz/animations-css/egipcia.css
+++ b/front/site/quiz/css-quiz/animations-css/egipcia.css
@@ -180,7 +180,7 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
+#linkGrecia:hover::after, #linkJaponesa:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
     content: "";
     height: 2px;
     background-color: #8C5B3E;
