--- a/front/site/quiz/css-quiz/animations-css/geral.css
+++ b/front/site/quiz/css-quiz/animations-css/geral.css
@@ -127,6 +127,17 @@ ul li ul.dropdown a:hover {
     animation-timing-function: linear;
 }
 
+.buttonResponder > input[type=button], .buttonResponder > input[type=submit] {
+    border: none;
+    background-color: #3027da;
+    color: #fff;
+    width: 150%;
+    padding: 20px;
+    font-size: 18px;
+    border-radius: 37px;
+    cursor: pointer;
+}
+
 @keyframes sair-animation {
     0% {
         width: 70%;
